# gnome-nfc

./: AUTHORS  MAINTAINERS  README  configure.ac  gnome-nfc.py  main.py  neardutils.py
src/: Makefile  Makefile.am  gnome-nfc.in
src/gnomenfc/: AdapterPropertiesWindow.py  Makefile.am  NfcApp.py  NfcApplet.py  __init__.py  neardutils.py  settings.ui
src/gnomenfc/icons/: Makefile.am
